# ecu-cortexm3-example

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
cmake/: generic-gnu-stm32f103.cmake
include/led/: led_fsm.h
src/: led_fsm.c  main.c
src/app/: led_fsm.c  led_fsm.h  main.c
src/bsp/: bsp.h
src/bsp/integration_test/: bsp.c
src/bsp/stm32_nucleo_l432kc_reva/: bsp.c
toolchain/: generic-gnu-stm32f103c8.cmake  generic-gnu-stm32l432.cmake  stm32f103c8.ld  stm32f103c8_startup.c  stm32l432_startup.c  stm32l432xc.ld
